traefik/redirect_scheme.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-scheme
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
